# wal2json

./: Dockerfile  README.md  config.py  docker-compose.yml  env.template  initdb_consumer.sh  initdb_producer.sh  main.py  pyproject.toml
consumer/: base_repository.py  callback.py  ddl.py  initializer.py  main.py  repository_test_one.py  repository_test_three.py  repository_test_two.py
producer/: base_repository.py  main.py  repository_test_one.py  repository_test_three.py  repository_test_two.py
