[tool.poetry]
name = "wal2json"
version = "0.1.0"
description = ""
authors = ["Fedor Obolihin <fedor.obolihin@zyfra.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
